API endpoints connected to a  MySQL instance
